--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@ant-design-vue/nuxt": "^1.4.6",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@pinia/nuxt": "^0.11.2",
     "@storefront-ui/nuxt": "^2.5.4",
     "@storefront-ui/vue": "^2.6.5",
     "@vue/runtime-core": "^3.5.17",
+    "ant-design-vue": "^4.2.6",
     "nuxt": "^3.17.6",
     "nuxt-lucide-icons": "^1.0.5",
     "pinia": "^3.0.3",
