scroll smooth and fix sidebar

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,3 @@
 {
-  "compilerOptions": {
-    "paths": {
-      "@/*": ["app/*"],
-      "~/*": ["app/*"]
-    }
-  }
+  "extends": "./.nuxt/tsconfig.json"
 }
