--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@storefront-ui/vue": "^2.6.5",
     "@vue/runtime-core": "^3.5.17",
     "ant-design-vue": "^4.2.6",
+    "lenis": "^1.3.15",
     "nuxt": "^3.17.6",
     "nuxt-lucide-icons": "^1.0.5",
     "pinia": "^3.0.3",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "baseline-browser-mapping": "^2.9.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7"
