--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@ant-design-vue/nuxt": "^1.4.6",
     "@fortawesome/fontawesome-free": "^6.7.2",
-    "@nuxtjs/tailwindcss": "^6.14.0",
+    "@hugeicons/core-free-icons": "^3.1.1",
+    "@hugeicons/vue": "^1.0.4",
     "@pinia/nuxt": "^0.11.2",
-    "@storefront-ui/nuxt": "^2.5.4",
-    "@storefront-ui/vue": "^2.6.5",
+    "@tailwindcss/vite": "^4.1.18",
     "@vue/runtime-core": "^3.5.17",
-    "ant-design-vue": "^4.2.6",
+    "@vueuse/core": "^14.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lenis": "^1.3.15",
+    "lucide-vue-next": "^0.562.0",
     "nuxt": "^3.17.6",
-    "nuxt-lucide-icons": "^1.0.5",
     "pinia": "^3.0.3",
+    "radix-vue": "^1.9.17",
+    "reka-ui": "^2.7.0",
+    "shadcn-nuxt": "^2.4.3",
+    "tailwind-merge": "^3.4.0",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
@@ -29,7 +34,7 @@
     "autoprefixer": "^10.4.21",
     "baseline-browser-mapping": "^2.9.2",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.18",
     "tailwindcss-animate": "^1.0.7"
   }
 }
